--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 40px;
-    font-family: Montserrat;
+    font-family: Montserrat,sans-serif;
 }
 
 .wrapper {
@@ -19,6 +19,7 @@
     max-width: 1200px;
     margin: 0 auto;
     box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15);
+
 }
 
 .aside {
@@ -51,6 +52,7 @@
     font-size: 22px;
     font-weight: 700;
     line-height: 24px;
+    margin-bottom: 20px;
 }
 
 .contact-link {
@@ -73,7 +75,7 @@
     font-weight: 700;
     line-height: 24px;
     color: #fff;
-    margin-right: 11px;
+    margin-right: 5px;
 }
 .contact-link2 {
     color: #6f7680;
